# spine_cpp_sfml

./: CMakeLists.txt
spine-sfml/: spine-sfml.cpp
